--- a/style.css
+++ b/style.css
@@ -2423,11 +2423,8 @@ h2.entry-title {
 }
 
 .post-meta-wrapper {
-	margin-top: 2rem;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 2rem auto 0 auto;
 	max-width: 58rem;
-	width: calc(100% - 4rem);
 }
 
 .post-meta {
@@ -2587,11 +2584,8 @@ h2.entry-title {
 /* Author Bio -------------------------------- */
 
 .author-bio {
-	margin-top: 4rem;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 4rem auto 0 auto;
 	max-width: 58rem;
-	width: calc(100% - 4rem);
 }
 
 .hide-avatars .author-bio {
